--- a/DriversGalaxy.OSMigrationTool.Backup/DriversGalaxy.OSMigrationTool.Backup.csproj
+++ b/DriversGalaxy.OSMigrationTool.Backup/DriversGalaxy.OSMigrationTool.Backup.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Routine\Converters\PropertyEqualsToVisibilityConverter.cs" />
     <Compile Include="Routine\WPFLocalizeExtensionHelpers.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\AboutBox.xaml.cs">
+      <DependentUpon>AboutBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PanelComposing.xaml.cs">
       <DependentUpon>PanelComposing.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AboutBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\PanelComposing.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -225,6 +232,7 @@
     <Resource Include="Images\tw.png" />
     <Resource Include="Images\tw_bg.png" />
     <Resource Include="DriverGalaxy.ico" />
+    <Resource Include="Images\icon-app.png" />
     <Content Include="Libraries\Ionic.Zip.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
