--- a/DriversGalaxy.OSMigrationTool.Restore/DriversGalaxy.OSMigrationTool.Restore.csproj
+++ b/DriversGalaxy.OSMigrationTool.Restore/DriversGalaxy.OSMigrationTool.Restore.csproj
@@ -101,6 +101,9 @@
     <Compile Include="Routine\Converters\PropertyEqualsToVisibilityConverter.cs" />
     <Compile Include="Routine\WPFLocalizeExtensionHelpers.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\AboutBox.xaml.cs">
+      <DependentUpon>AboutBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PanelInstalling.xaml.cs">
       <DependentUpon>PanelInstalling.xaml</DependentUpon>
     </Compile>
@@ -122,6 +125,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\AboutBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\PanelInstalling.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -200,6 +207,7 @@
     <Resource Include="Images\tw.png" />
     <Resource Include="Images\tw_bg.png" />
     <Resource Include="DriverGalaxy.ico" />
+    <Resource Include="Images\icon-app.png" />
     <Content Include="Libraries\Ionic.Zip.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
