--- a/DriversGalaxy.Infrastructure/DriversGalaxy.Infrastructure.csproj
+++ b/DriversGalaxy.Infrastructure/DriversGalaxy.Infrastructure.csproj
@@ -228,7 +228,9 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)DriversGalaxy\$(OutDir)Libraries\" /Y
-if "$(ConfigurationName)" == "Debug" (
+copy "$(SolutionDir)DriversGalaxy.Infrastructure\stduhelper64.dll" "$(SolutionDir)DriversGalaxy\$(OutDir)stduhelper64.dll"
+copy "$(SolutionDir)DriversGalaxy.Infrastructure\stduhelper32.dll" "$(SolutionDir)DriversGalaxy\$(OutDir)stduhelper32.dll"
+if "$(ConfigurationName)" == "Debug" or "$(ConfigurationName)" == "Release" (
   if "$(PROCESSOR_ARCHITEW6432)" == "AMD64" (
     copy "$(SolutionDir)DriversGalaxy.Infrastructure\stduhelper64.dll" "$(SolutionDir)DriversGalaxy.Infrastructure\$(OutDir)stduhelper.dll"
     copy "$(SolutionDir)DriversGalaxy.Infrastructure\stduhelper64.dll" "$(SolutionDir)DriversGalaxy\$(OutDir)stduhelper.dll"
