--- a/DriversGalaxy.OSMigrationTool.Backup/DriversGalaxy.OSMigrationTool.Backup.csproj
+++ b/DriversGalaxy.OSMigrationTool.Backup/DriversGalaxy.OSMigrationTool.Backup.csproj
@@ -78,7 +78,8 @@
       <HintPath>Libraries\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="Ookii.Dialogs.Wpf, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0c15020868fd6249, processorArchitecture=MSIL">
-      <Private>False</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\Ookii.Dialogs.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Management" />
@@ -227,18 +228,9 @@
     <Resource Include="Images\tw_bg.png" />
     <Resource Include="DriverGalaxy.ico" />
     <Resource Include="Images\icon-app.png" />
-    <Content Include="Libraries\Ionic.Zip.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\Ookii.Dialogs.Wpf.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\System.Tuples.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\WPFLocalizeExtension.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Libraries\Ionic.Zip.dll" />
+    <Content Include="Libraries\Ookii.Dialogs.Wpf.dll" />
+    <Content Include="Libraries\WPFLocalizeExtension.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DriversGalaxy.Infrastructure\DriversGalaxy.Infrastructure.csproj">
