--- a/DriversGalaxy/DriversGalaxy.csproj
+++ b/DriversGalaxy/DriversGalaxy.csproj
@@ -340,6 +340,12 @@
     <Resource Include="DriverGalaxy.ico" />
     <Resource Include="Images\DriverGalaxy.ico" />
     <None Include="Resources\DriverGalaxy.bmp" />
+    <Content Include="stduhelper32.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="stduhelper64.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="unrar.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -476,8 +482,19 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>if "$(ConfigurationName)" == "Debug" (
+  if "$(PROCESSOR_ARCHITEW6432)" == "AMD64" (
+    copy "$(SolutionDir)DriversGalaxy\stduhelper64.dll" "$(SolutionDir)DriversGalaxy.Infrastructure\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper64.dll" "$(SolutionDir)DriversGalaxy\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper64.dll" "$(SolutionDir)DriversGalaxy.OSMigrationTool.Backup\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper64.dll" "$(SolutionDir)DriversGalaxy.OSMigrationTool.Restore\$(OutDir)stduhelper.dll"
+  ) else (
+    copy "$(SolutionDir)DriversGalaxy\stduhelper32.dll" "$(SolutionDir)DriversGalaxy.Infrastructure\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper32.dll" "$(SolutionDir)DriversGalaxy\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper32.dll" "$(SolutionDir)DriversGalaxy.OSMigrationTool.Backup\$(OutDir)stduhelper.dll"
+    copy "$(SolutionDir)DriversGalaxy\stduhelper32.dll" "$(SolutionDir)DriversGalaxy.OSMigrationTool.Restore\$(OutDir)stduhelper.dll"
+  )
+)</PostBuildEvent>
   </PropertyGroup>
   <!-- <Import Project="$(MSBuildExtensionsPath)\Microsoft\Expression\Blend\.NETFramework\v4.0\Microsoft.Expression.Blend.WPF.targets" />
   To modify your build process, add your task inside one of the targets below and uncomment it. 
